[package]
name = "axum-double-sided-tape"
version = "0.1.0"
edition = "2024"

[dependencies]
#tokio = { version = "1.44", features = [
#  "macros",
#  "rt-multi-thread",
#  "sync",
#  "time",
#  "net",
#  "io-util",
#] }
#tokio-util = "0.7"
futures = "0.3.31"

#uuid = { version = "1.16", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#bincode = { version = "2.0.1", features = ["serde"] }
#bytes = { version = "1.10", features = ["serde"] }

#aide = { version = "0.14", features = [
#  "axum-tokio",         # for ConnectInfo
#  "axum-json",
#  "axum-extra-headers",
#  "axum-ws",
#  "scalar",
#  "macros",
#] }
axum = { version = "0.8.1", features = ["macros", "ws", "json", "tokio"] }
#axum-extra = { version = "0.10.1", features = ["typed-header"] }
#jsonwebtoken = { version = "9.3.1" }
# For server / api
#schemars = { version = "0.8.10", features = ["uuid1"] }

# For client
reqwest = { version = "0.12.15", features = ["json"] }
#tower-http = { version = "0.6.2", features = ["trace", "fs", "cors"] }
